docs: 实例配置文件
docs: README.md

chore: 更新Github URL

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,7 +11,7 @@ hero:
       link: /start/config_jamd
       icon: right-arrow
     - text: Github
-      link: https://github.com/MSLXTeam/jamctl
+      link: https://github.com/jamctl/jamctl
       icon: github
       variant: secondary
 ---
