--- a/src/content/docs/start/config_jamd.mdx
+++ b/src/content/docs/start/config_jamd.mdx
@@ -5,7 +5,7 @@ title: Jamd配置
 import {Code} from 'astro-expressive-code/components'
 import config from "./jamd.yaml?raw"
 
-这是Jamd本体的默认配置文件:
+这是Jamd本体的默认配置文件,当jamd.yaml不存在时,也会应用下面的配置:
 
 <Code code={config} lang="yaml" title="jamd.yaml"/>
 
