--- a/src/content/docs/start/config_jamd.mdx
+++ b/src/content/docs/start/config_jamd.mdx
@@ -23,10 +23,10 @@ import {Aside} from "@astrojs/starlight/components";
 | bool | enable_register               | 启用注册功能       |
 | bool | enable_grpc_server_reflection | 启用gRPC服务器端反射 |
 <Aside type="caution" title="仅在开发时启用gRPC服务器端反射">
-    反射是一个协议，gRPC服务器可以使用它来声明通过标准化RPC服务公开的Protobuf定义的 API，
-    包括请求和响应消息引用的所有类型。客户端随后可以使用这些信息以人类可读的方式编码请求和解码响应。
+    “反射是一个协议，gRPC服务器可以使用它来声明通过标准化RPC服务公开的Protobuf定义的 API，
+    包括请求和响应消息引用的所有类型。客户端随后可以使用这些信息以人类可读的方式编码请求和解码响应。”
 
-    或者换句话说，这会暴露你所有的API，因此在生产环境中会带来安全问题。仅在开发时启用此选项。
+    换句话说，这会暴露你所有的API，因此在生产环境中会带来安全问题。仅在开发时启用此选项。
 </Aside>
 
 ## 安全
