--- a/src/content/docs/start/dev.mdx
+++ b/src/content/docs/start/dev.mdx
@@ -3,7 +3,10 @@ title: 开发
 ---
 
 ```bash
-git clone git@github.com:MSLXTeam/jamctl.git
+git clone git@github.com:jamctl/jamctl.git
 cd jamctl/jamd
-vcpkg install
+mkdir cmake-build-debug
+cd cmake-build-debug
+cmake -DCMAKE_TOOLCHAIN_FILE=/path/to/your/vcpkg.cmake ..
+make
 ```
